@@ -1,3 +1,4 @@
-EXTRA_DIST = lb.sh loopbounds.pl types.pl while2for.pl
+EXTRA_DIST = lb.sh.in loopbounds.pl \
+	types.pl while2for.pl validator.pl comefrom.pl
 
 
